// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`strategyRuntime hook params snapshots afterCoreDecision params snapshot (entry) 1`] = `
{
  "ctx": {
    "connector": {
      "closePosition": "[Function]",
      "placeOrder": "[Function]",
      "setStopLoss": "[Function]",
      "setTakeProfits": "[Function]",
    },
    "env": "LIVE",
    "isConfigFromBacktest": false,
    "strategyConfig": {
      "ENV": "LIVE",
      "MAKE_ORDERS": true,
    },
    "strategyName": "TrendLine",
    "symbol": "ETHUSDT",
    "userName": "root",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": true,
        "minQuality": 5,
      },
      "ml": {
        "enabled": true,
        "mlThreshold": 0.5,
        "strategyConfig": {
          "X": 1,
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "market": {
    "btcCandle": {
      "close": 40500,
      "dt": "2024-01-01",
      "high": 41000,
      "low": 39000,
      "open": 40000,
      "timestamp": 1,
      "turnover": 20000000,
      "volume": 500,
    },
    "candle": {
      "close": 102,
      "dt": "2024-01-01",
      "high": 105,
      "low": 95,
      "open": 100,
      "timestamp": 1,
      "turnover": 100000,
      "volume": 1000,
    },
  },
}
`;

exports[`strategyRuntime hook params snapshots afterCoreDecision params snapshot (exit) 1`] = `
{
  "ctx": {
    "connector": {
      "closePosition": "[Function]",
      "placeOrder": "[Function]",
      "setStopLoss": "[Function]",
      "setTakeProfits": "[Function]",
    },
    "env": "LIVE",
    "isConfigFromBacktest": false,
    "strategyConfig": {
      "ENV": "LIVE",
      "MAKE_ORDERS": true,
    },
    "strategyName": "TrendLine",
    "symbol": "ETHUSDT",
    "userName": "root",
  },
  "decision": {
    "closePlan": {
      "direction": "LONG",
      "price": 100,
      "timestamp": 1700000123000,
    },
    "code": "CLOSE_BY_SIGNAL",
    "kind": "exit",
  },
  "market": {
    "btcCandle": {
      "close": 40500,
      "dt": "2024-01-01",
      "high": 41000,
      "low": 39000,
      "open": 40000,
      "timestamp": 1,
      "turnover": 20000000,
      "volume": 500,
    },
    "candle": {
      "close": 102,
      "dt": "2024-01-01",
      "high": 105,
      "low": 95,
      "open": 100,
      "timestamp": 1,
      "turnover": 100000,
      "volume": 1000,
    },
  },
}
`;

exports[`strategyRuntime hook params snapshots afterCoreDecision params snapshot (skip) 1`] = `
{
  "ctx": {
    "connector": {
      "closePosition": "[Function]",
      "placeOrder": "[Function]",
      "setStopLoss": "[Function]",
      "setTakeProfits": "[Function]",
    },
    "env": "LIVE",
    "isConfigFromBacktest": false,
    "strategyConfig": {
      "ENV": "LIVE",
      "MAKE_ORDERS": true,
    },
    "strategyName": "TrendLine",
    "symbol": "ETHUSDT",
    "userName": "root",
  },
  "decision": {
    "code": "NO_SIGNAL",
    "kind": "skip",
  },
  "market": {
    "btcCandle": {
      "close": 40500,
      "dt": "2024-01-01",
      "high": 41000,
      "low": 39000,
      "open": 40000,
      "timestamp": 1,
      "turnover": 20000000,
      "volume": 500,
    },
    "candle": {
      "close": 102,
      "dt": "2024-01-01",
      "high": 105,
      "low": 95,
      "open": 100,
      "timestamp": 1,
      "turnover": 100000,
      "volume": 1000,
    },
  },
}
`;

exports[`strategyRuntime hook params snapshots afterEnrichAi params snapshot 1`] = `
{
  "ai": {
    "applied": true,
    "attempted": true,
    "config": {
      "enabled": true,
      "minQuality": 5,
    },
    "quality": 5,
  },
  "ctx": {
    "connector": {
      "closePosition": "[Function]",
      "placeOrder": "[Function]",
      "setStopLoss": "[Function]",
      "setTakeProfits": "[Function]",
    },
    "env": "LIVE",
    "isConfigFromBacktest": false,
    "strategyConfig": {
      "ENV": "LIVE",
      "MAKE_ORDERS": true,
    },
    "strategyName": "TrendLine",
    "symbol": "ETHUSDT",
    "userName": "root",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": true,
        "minQuality": 5,
      },
      "ml": {
        "enabled": true,
        "mlThreshold": 0.5,
        "strategyConfig": {
          "X": 1,
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "entry": {
    "context": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "raw": {
        "ai": {
          "enabled": true,
          "minQuality": 5,
        },
        "ml": {
          "enabled": true,
          "mlThreshold": 0.5,
          "strategyConfig": {
            "X": 1,
          },
        },
      },
      "resolved": {
        "ai": {
          "enabled": true,
          "minQuality": 5,
        },
        "ml": {
          "enabled": true,
          "mlThreshold": 0.5,
          "strategyConfig": {
            "X": 1,
          },
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "market": {
    "btcCandle": {
      "close": 40500,
      "dt": "2024-01-01",
      "high": 41000,
      "low": 39000,
      "open": 40000,
      "timestamp": 1,
      "turnover": 20000000,
      "volume": 500,
    },
    "candle": {
      "close": 102,
      "dt": "2024-01-01",
      "high": 105,
      "low": 95,
      "open": 100,
      "timestamp": 1,
      "turnover": 100000,
      "volume": 1000,
    },
  },
  "ml": {
    "applied": false,
    "attempted": true,
    "config": {
      "enabled": true,
      "mlThreshold": 0.5,
      "strategyConfig": {
        "X": 1,
      },
    },
    "skippedReason": "NO_RESULT",
  },
}
`;

exports[`strategyRuntime hook params snapshots afterEnrichMl params snapshot 1`] = `
{
  "ctx": {
    "connector": {
      "closePosition": "[Function]",
      "placeOrder": "[Function]",
      "setStopLoss": "[Function]",
      "setTakeProfits": "[Function]",
    },
    "env": "LIVE",
    "isConfigFromBacktest": false,
    "strategyConfig": {
      "ENV": "LIVE",
      "MAKE_ORDERS": true,
    },
    "strategyName": "TrendLine",
    "symbol": "ETHUSDT",
    "userName": "root",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": true,
        "minQuality": 5,
      },
      "ml": {
        "enabled": true,
        "mlThreshold": 0.5,
        "strategyConfig": {
          "X": 1,
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "entry": {
    "context": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "raw": {
        "ai": {
          "enabled": true,
          "minQuality": 5,
        },
        "ml": {
          "enabled": true,
          "mlThreshold": 0.5,
          "strategyConfig": {
            "X": 1,
          },
        },
      },
      "resolved": {
        "ai": {
          "enabled": true,
          "minQuality": 5,
        },
        "ml": {
          "enabled": true,
          "mlThreshold": 0.5,
          "strategyConfig": {
            "X": 1,
          },
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "market": {
    "btcCandle": {
      "close": 40500,
      "dt": "2024-01-01",
      "high": 41000,
      "low": 39000,
      "open": 40000,
      "timestamp": 1,
      "turnover": 20000000,
      "volume": 500,
    },
    "candle": {
      "close": 102,
      "dt": "2024-01-01",
      "high": 105,
      "low": 95,
      "open": 100,
      "timestamp": 1,
      "turnover": 100000,
      "volume": 1000,
    },
  },
  "ml": {
    "applied": false,
    "attempted": true,
    "config": {
      "enabled": true,
      "mlThreshold": 0.5,
      "strategyConfig": {
        "X": 1,
      },
    },
    "skippedReason": "NO_RESULT",
  },
}
`;

exports[`strategyRuntime hook params snapshots afterPlaceOrder params snapshot (with signal) 1`] = `
{
  "ai": {
    "applied": true,
    "attempted": true,
    "config": {
      "enabled": true,
      "minQuality": 5,
    },
    "quality": 5,
  },
  "ctx": {
    "connector": {
      "closePosition": "[Function]",
      "placeOrder": "[Function]",
      "setStopLoss": "[Function]",
      "setTakeProfits": "[Function]",
    },
    "env": "LIVE",
    "isConfigFromBacktest": false,
    "strategyConfig": {
      "ENV": "LIVE",
      "MAKE_ORDERS": true,
    },
    "strategyName": "TrendLine",
    "symbol": "ETHUSDT",
    "userName": "root",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": true,
        "minQuality": 5,
      },
      "ml": {
        "enabled": true,
        "mlThreshold": 0.5,
        "strategyConfig": {
          "X": 1,
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "entry": {
    "context": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "raw": {
        "ai": {
          "enabled": true,
          "minQuality": 5,
        },
        "ml": {
          "enabled": true,
          "mlThreshold": 0.5,
          "strategyConfig": {
            "X": 1,
          },
        },
      },
      "resolved": {
        "ai": {
          "enabled": true,
          "minQuality": 5,
        },
        "ml": {
          "enabled": true,
          "mlThreshold": 0.5,
          "strategyConfig": {
            "X": 1,
          },
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "market": {
    "btcCandle": {
      "close": 40500,
      "dt": "2024-01-01",
      "high": 41000,
      "low": 39000,
      "open": 40000,
      "timestamp": 1,
      "turnover": 20000000,
      "volume": 500,
    },
    "candle": {
      "close": 102,
      "dt": "2024-01-01",
      "high": 105,
      "low": 95,
      "open": 100,
      "timestamp": 1,
      "turnover": 100000,
      "volume": 1000,
    },
  },
  "ml": {
    "applied": false,
    "attempted": true,
    "config": {
      "enabled": true,
      "mlThreshold": 0.5,
      "strategyConfig": {
        "X": 1,
      },
    },
    "skippedReason": "NO_RESULT",
  },
  "order": {
    "result": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "policy": {
    "aiQuality": 5,
    "makeOrdersEnabled": true,
    "minAiQuality": 5,
  },
}
`;

exports[`strategyRuntime hook params snapshots afterPlaceOrder params snapshot (without signal) 1`] = `
{
  "ai": undefined,
  "ctx": {
    "connector": {
      "closePosition": "[Function]",
      "placeOrder": "[Function]",
      "setStopLoss": "[Function]",
      "setTakeProfits": "[Function]",
    },
    "env": "LIVE",
    "isConfigFromBacktest": false,
    "strategyConfig": {
      "ENV": "LIVE",
      "MAKE_ORDERS": true,
    },
    "strategyName": "TrendLine",
    "symbol": "ETHUSDT",
    "userName": "root",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": false,
      },
      "ml": {
        "enabled": false,
      },
    },
    "signal": undefined,
  },
  "entry": {
    "context": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "raw": {
        "ai": {
          "enabled": false,
        },
        "ml": {
          "enabled": false,
        },
      },
      "resolved": {
        "ai": {
          "enabled": false,
          "minQuality": undefined,
        },
        "ml": {
          "enabled": false,
          "mlThreshold": undefined,
          "strategyConfig": {
            "ENV": "LIVE",
            "MAKE_ORDERS": true,
            "TRENDLINE_CONFIG": {},
          },
        },
      },
    },
    "signal": undefined,
  },
  "market": {
    "btcCandle": {
      "close": 40500,
      "dt": "2024-01-01",
      "high": 41000,
      "low": 39000,
      "open": 40000,
      "timestamp": 1,
      "turnover": 20000000,
      "volume": 500,
    },
    "candle": {
      "close": 102,
      "dt": "2024-01-01",
      "high": 105,
      "low": 95,
      "open": 100,
      "timestamp": 1,
      "turnover": 100000,
      "volume": 1000,
    },
  },
  "ml": undefined,
  "order": {
    "result": "ENTRY",
  },
  "policy": {
    "aiQuality": undefined,
    "makeOrdersEnabled": true,
    "minAiQuality": 4,
  },
}
`;

exports[`strategyRuntime hook params snapshots beforeClosePosition params snapshot 1`] = `
{
  "ctx": {
    "connector": {
      "closePosition": "[Function]",
      "placeOrder": "[Function]",
      "setStopLoss": "[Function]",
      "setTakeProfits": "[Function]",
    },
    "env": "LIVE",
    "isConfigFromBacktest": false,
    "strategyConfig": {
      "ENV": "LIVE",
      "MAKE_ORDERS": true,
    },
    "strategyName": "TrendLine",
    "symbol": "ETHUSDT",
    "userName": "root",
  },
  "decision": {
    "closePlan": {
      "direction": "LONG",
      "price": 100,
      "timestamp": 1700000123000,
    },
    "code": "CLOSE_BY_SIGNAL",
    "kind": "exit",
  },
  "market": {
    "btcCandle": {
      "close": 40500,
      "dt": "2024-01-01",
      "high": 41000,
      "low": 39000,
      "open": 40000,
      "timestamp": 1,
      "turnover": 20000000,
      "volume": 500,
    },
    "candle": {
      "close": 102,
      "dt": "2024-01-01",
      "high": 105,
      "low": 95,
      "open": 100,
      "timestamp": 1,
      "turnover": 100000,
      "volume": 1000,
    },
  },
}
`;

exports[`strategyRuntime hook params snapshots beforeEntryGate params snapshot (with signal) 1`] = `
{
  "ai": {
    "applied": true,
    "attempted": true,
    "config": {
      "enabled": true,
      "minQuality": 5,
    },
    "quality": 5,
  },
  "ctx": {
    "connector": {
      "closePosition": "[Function]",
      "placeOrder": "[Function]",
      "setStopLoss": "[Function]",
      "setTakeProfits": "[Function]",
    },
    "env": "LIVE",
    "isConfigFromBacktest": false,
    "strategyConfig": {
      "ENV": "LIVE",
      "MAKE_ORDERS": true,
    },
    "strategyName": "TrendLine",
    "symbol": "ETHUSDT",
    "userName": "root",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": true,
        "minQuality": 5,
      },
      "ml": {
        "enabled": true,
        "mlThreshold": 0.5,
        "strategyConfig": {
          "X": 1,
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "entry": {
    "context": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "raw": {
        "ai": {
          "enabled": true,
          "minQuality": 5,
        },
        "ml": {
          "enabled": true,
          "mlThreshold": 0.5,
          "strategyConfig": {
            "X": 1,
          },
        },
      },
      "resolved": {
        "ai": {
          "enabled": true,
          "minQuality": 5,
        },
        "ml": {
          "enabled": true,
          "mlThreshold": 0.5,
          "strategyConfig": {
            "X": 1,
          },
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "market": {
    "btcCandle": {
      "close": 40500,
      "dt": "2024-01-01",
      "high": 41000,
      "low": 39000,
      "open": 40000,
      "timestamp": 1,
      "turnover": 20000000,
      "volume": 500,
    },
    "candle": {
      "close": 102,
      "dt": "2024-01-01",
      "high": 105,
      "low": 95,
      "open": 100,
      "timestamp": 1,
      "turnover": 100000,
      "volume": 1000,
    },
  },
  "ml": {
    "applied": false,
    "attempted": true,
    "config": {
      "enabled": true,
      "mlThreshold": 0.5,
      "strategyConfig": {
        "X": 1,
      },
    },
    "skippedReason": "NO_RESULT",
  },
  "policy": {
    "aiQuality": 5,
    "makeOrdersEnabled": true,
    "minAiQuality": 5,
  },
}
`;

exports[`strategyRuntime hook params snapshots beforeEntryGate params snapshot (without signal) 1`] = `
{
  "ai": undefined,
  "ctx": {
    "connector": {
      "closePosition": "[Function]",
      "placeOrder": "[Function]",
      "setStopLoss": "[Function]",
      "setTakeProfits": "[Function]",
    },
    "env": "LIVE",
    "isConfigFromBacktest": false,
    "strategyConfig": {
      "ENV": "LIVE",
      "MAKE_ORDERS": true,
    },
    "strategyName": "TrendLine",
    "symbol": "ETHUSDT",
    "userName": "root",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": false,
      },
      "ml": {
        "enabled": false,
      },
    },
    "signal": undefined,
  },
  "entry": {
    "context": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "raw": {
        "ai": {
          "enabled": false,
        },
        "ml": {
          "enabled": false,
        },
      },
      "resolved": {
        "ai": {
          "enabled": false,
          "minQuality": undefined,
        },
        "ml": {
          "enabled": false,
          "mlThreshold": undefined,
          "strategyConfig": {
            "ENV": "LIVE",
            "MAKE_ORDERS": true,
            "TRENDLINE_CONFIG": {},
          },
        },
      },
    },
    "signal": undefined,
  },
  "market": {
    "btcCandle": {
      "close": 40500,
      "dt": "2024-01-01",
      "high": 41000,
      "low": 39000,
      "open": 40000,
      "timestamp": 1,
      "turnover": 20000000,
      "volume": 500,
    },
    "candle": {
      "close": 102,
      "dt": "2024-01-01",
      "high": 105,
      "low": 95,
      "open": 100,
      "timestamp": 1,
      "turnover": 100000,
      "volume": 1000,
    },
  },
  "ml": undefined,
  "policy": {
    "aiQuality": undefined,
    "makeOrdersEnabled": true,
    "minAiQuality": 4,
  },
}
`;

exports[`strategyRuntime hook params snapshots beforePlaceOrder params snapshot (with signal) 1`] = `
{
  "ai": {
    "applied": true,
    "attempted": true,
    "config": {
      "enabled": true,
      "minQuality": 5,
    },
    "quality": 5,
  },
  "ctx": {
    "connector": {
      "closePosition": "[Function]",
      "placeOrder": "[Function]",
      "setStopLoss": "[Function]",
      "setTakeProfits": "[Function]",
    },
    "env": "LIVE",
    "isConfigFromBacktest": false,
    "strategyConfig": {
      "ENV": "LIVE",
      "MAKE_ORDERS": true,
    },
    "strategyName": "TrendLine",
    "symbol": "ETHUSDT",
    "userName": "root",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": true,
        "minQuality": 5,
      },
      "ml": {
        "enabled": true,
        "mlThreshold": 0.5,
        "strategyConfig": {
          "X": 1,
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "entry": {
    "context": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "raw": {
        "ai": {
          "enabled": true,
          "minQuality": 5,
        },
        "ml": {
          "enabled": true,
          "mlThreshold": 0.5,
          "strategyConfig": {
            "X": 1,
          },
        },
      },
      "resolved": {
        "ai": {
          "enabled": true,
          "minQuality": 5,
        },
        "ml": {
          "enabled": true,
          "mlThreshold": 0.5,
          "strategyConfig": {
            "X": 1,
          },
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "market": {
    "btcCandle": {
      "close": 40500,
      "dt": "2024-01-01",
      "high": 41000,
      "low": 39000,
      "open": 40000,
      "timestamp": 1,
      "turnover": 20000000,
      "volume": 500,
    },
    "candle": {
      "close": 102,
      "dt": "2024-01-01",
      "high": 105,
      "low": 95,
      "open": 100,
      "timestamp": 1,
      "turnover": 100000,
      "volume": 1000,
    },
  },
  "ml": {
    "applied": false,
    "attempted": true,
    "config": {
      "enabled": true,
      "mlThreshold": 0.5,
      "strategyConfig": {
        "X": 1,
      },
    },
    "skippedReason": "NO_RESULT",
  },
  "policy": {
    "aiQuality": 5,
    "makeOrdersEnabled": true,
    "minAiQuality": 5,
  },
}
`;

exports[`strategyRuntime hook params snapshots beforePlaceOrder params snapshot 1`] = `
{
  "ai": undefined,
  "ctx": {
    "connector": {
      "closePosition": "[Function]",
      "placeOrder": "[Function]",
      "setStopLoss": "[Function]",
      "setTakeProfits": "[Function]",
    },
    "env": "LIVE",
    "isConfigFromBacktest": false,
    "strategyConfig": {
      "ENV": "LIVE",
      "MAKE_ORDERS": true,
    },
    "strategyName": "TrendLine",
    "symbol": "ETHUSDT",
    "userName": "root",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": false,
      },
      "ml": {
        "enabled": false,
      },
    },
    "signal": undefined,
  },
  "entry": {
    "context": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "raw": {
        "ai": {
          "enabled": false,
        },
        "ml": {
          "enabled": false,
        },
      },
      "resolved": {
        "ai": {
          "enabled": false,
          "minQuality": undefined,
        },
        "ml": {
          "enabled": false,
          "mlThreshold": undefined,
          "strategyConfig": {
            "ENV": "LIVE",
            "MAKE_ORDERS": true,
            "TRENDLINE_CONFIG": {},
          },
        },
      },
    },
    "signal": undefined,
  },
  "market": {
    "btcCandle": {
      "close": 40500,
      "dt": "2024-01-01",
      "high": 41000,
      "low": 39000,
      "open": 40000,
      "timestamp": 1,
      "turnover": 20000000,
      "volume": 500,
    },
    "candle": {
      "close": 102,
      "dt": "2024-01-01",
      "high": 105,
      "low": 95,
      "open": 100,
      "timestamp": 1,
      "turnover": 100000,
      "volume": 1000,
    },
  },
  "ml": undefined,
  "policy": {
    "aiQuality": undefined,
    "makeOrdersEnabled": true,
    "minAiQuality": 4,
  },
}
`;

exports[`strategyRuntime hook params snapshots onInit params snapshot 1`] = `
{
  "ctx": {
    "connector": {
      "closePosition": "[Function]",
      "placeOrder": "[Function]",
      "setStopLoss": "[Function]",
      "setTakeProfits": "[Function]",
    },
    "env": "LIVE",
    "isConfigFromBacktest": false,
    "strategyConfig": {
      "ENV": "LIVE",
      "MAKE_ORDERS": true,
    },
    "strategyName": "TrendLine",
    "symbol": "ETHUSDT",
    "userName": "root",
  },
  "market": {
    "btcData": [],
    "data": [],
  },
}
`;

exports[`strategyRuntime hook params snapshots onRuntimeError params snapshot 1`] = `
{
  "ctx": {
    "connector": {
      "closePosition": "[Function]",
      "placeOrder": "[Function]",
      "setStopLoss": "[Function]",
      "setTakeProfits": "[Function]",
    },
    "env": "LIVE",
    "isConfigFromBacktest": false,
    "strategyConfig": {
      "ENV": "LIVE",
      "MAKE_ORDERS": true,
    },
    "strategyName": "TrendLine",
    "symbol": "ETHUSDT",
    "userName": "root",
  },
  "decision": {
    "code": "NO_SIGNAL",
    "kind": "skip",
  },
  "entry": undefined,
  "error": {
    "cause": {},
    "stage": "afterCoreDecision",
  },
  "market": {
    "btcCandle": {
      "close": 40500,
      "dt": "2024-01-01",
      "high": 41000,
      "low": 39000,
      "open": 40000,
      "timestamp": 1,
      "turnover": 20000000,
      "volume": 500,
    },
    "candle": {
      "close": 102,
      "dt": "2024-01-01",
      "high": 105,
      "low": 95,
      "open": 100,
      "timestamp": 1,
      "turnover": 100000,
      "volume": 1000,
    },
  },
}
`;

exports[`strategyRuntime hook params snapshots onSkip params snapshot 1`] = `
{
  "ctx": {
    "connector": {
      "closePosition": "[Function]",
      "placeOrder": "[Function]",
      "setStopLoss": "[Function]",
      "setTakeProfits": "[Function]",
    },
    "env": "LIVE",
    "isConfigFromBacktest": false,
    "strategyConfig": {
      "ENV": "LIVE",
      "MAKE_ORDERS": true,
    },
    "strategyName": "TrendLine",
    "symbol": "ETHUSDT",
    "userName": "root",
  },
  "decision": {
    "code": "FILTER_BLOCKED",
    "kind": "skip",
  },
  "market": {
    "btcCandle": {
      "close": 40500,
      "dt": "2024-01-01",
      "high": 41000,
      "low": 39000,
      "open": 40000,
      "timestamp": 1,
      "turnover": 20000000,
      "volume": 500,
    },
    "candle": {
      "close": 102,
      "dt": "2024-01-01",
      "high": 105,
      "low": 95,
      "open": 100,
      "timestamp": 1,
      "turnover": 100000,
      "volume": 1000,
    },
  },
}
`;
